--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,12 @@
     height: 80px;
 }
 
+@media (max-width: 767px) {
+    #suitcase {
+        height: 60px;
+    }
+}
+
 /*--- Hero image --- */
 
 #hero {
@@ -46,16 +52,31 @@
 
 .display-4 {
     padding-left: 200px;
-    padding-top: 200px;
     font-size: 70px;
     font-family: "Dancing Script";
     color: #463730;
     font-weight: 1000;
     letter-spacing: 8px;
+    margin-top: -600px;
 }
 
-@media (max-width: 1024px) {
-    
+@media (max-width: 1199px) {
+    #hero {
+        height: 1000px
+    }
+}
+
+@media (max-width: 767px) {
+    #hero {
+        height: 700px;
+        background-position: inherit;
+    }
+
+    .display-4 {
+        padding-left: 20px;
+        font-size: 48px;
+        margin-top: -550px;
+    }
 }
 
 /*--- Body --*/
@@ -103,3 +124,55 @@ body {
     margin-left: -100px;
     background-attachment: fixed;
 }
+
+@media (max-width: 1199px) {
+    .flex {
+        height: 500px;
+    }
+
+    .pic-tiles-1 {
+        width: 130%;
+        margin-left: 0;
+    }
+
+    .pic-tiles-2 {
+        width: 130%;
+        margin-left: -70px;
+    }
+
+    .pic-tiles-3 {
+        width: 130%;
+    }
+    
+    
+}
+
+@media (max-width: 767px) {
+    .intro {
+        font-size: 18px;
+        padding: 15% 5% 15%;
+    } 
+
+    .pic-tiles-1 {
+        border-radius: 30px;
+        width: 225%;
+        
+    }
+
+    .pic-tiles-2 {
+        border-radius: 30px;
+        width: 225%;
+        margin-bottom: 160px;
+        margin-left: 10px;
+        
+    }
+
+    .pic-tiles-3 {
+        border-radius: 30px;
+        width: 225%;
+        margin-top: 200px;
+        margin-left: -250%;
+        
+    }
+}
+
