--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,22 @@ body {
     background-attachment: fixed;
 }
 
+.intro2{
+    font-size: 24px;
+    padding: 0% 5% 20%;
+    color: #463730;
+    text-align-last: center;
+}
+
+.mb-4 {
+    padding: 40px;
+}
+
+.card-title {
+    text-align: center;
+    font-size: 48px;
+}
+
 @media (max-width: 1199px) {
     .flex {
         height: 500px;
@@ -173,6 +189,12 @@ body {
         margin-top: 200px;
         margin-left: -250%;
         
+    }
+
+    .intro2 {
+        font-size: 18px;
+        padding: 0% 5%;
+        margin-top: -20%;
     }
 }
 
