Newquay map applied but when one is active the other isn't - to investigate

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,15 @@ body {
     margin-bottom: 5%;
 }
 
+#map-newquay {
+    height: 250px;
+    width: 100%;
+    background-color: black;
+    overflow: inherit;
+    border: #fff;
+    margin-bottom: 5%;
+}
+
 
 @media (max-width: 1199px) {
     .flex {
