--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,11 @@ body {
     padding: 40px;
 }
 
+.read_more_button {
+    cursor: pointer;
+
+}
+
 .card-title {
     text-align: center;
     font-size: 48px;
@@ -184,6 +189,7 @@ body {
 /* Contact section */
 
 #contact {
+    padding-top: 200px;
     padding-bottom: 50px;
 }
 
@@ -191,6 +197,42 @@ body {
     font-size: 24px;
     padding-left: 50px;
     padding-right: 50px;
+}
+
+form {
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.message-area {
+    margin-bottom: 20px;
+}
+
+.bd-example {
+    text-align: center;
+}
+
+.btn-outline-info {
+    color: #1F5673;
+    border-color: #1F5673;
+
+}
+
+.btn-outline-info:hover {
+    color: #fff;
+    background-color: #1F5673;
+
+}
+
+/* Farewell image */
+
+.teddy {
+    margin-top: 250px;
+    margin-bottom: 250px;
+}
+
+.img-fluid {
+    border-radius: 20px;
 }
 
 @media (max-width: 1199px) {
@@ -214,6 +256,15 @@ body {
 
     .contact-desc {
     font-size: 18px;    
+    }
+
+    #contact {
+    padding-top: 100px;
+    }
+
+    .teddy {
+    margin-top: 150px;
+    margin-bottom: 150px;
     }
 }
 
@@ -249,6 +300,10 @@ body {
         font-size: 18px;
         padding: 0% 5%;
         margin-top: -20%;
+    }
+
+    .card-title {
+        font-size: 36px;
     }
 }
 
