--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@
     height: 80px;
 }
 
+#suitcase:hover {
+    color: aquamarine;
+}
+
 @media (max-width: 767px) {
     #suitcase {
         height: 60px;
@@ -233,6 +237,56 @@ form {
 
 .img-fluid {
     border-radius: 20px;
+}
+
+.footer {
+    background-color: #1F5673;
+    padding: 40px;
+    border-radius: 30px 30px 0 0;
+}
+
+.copyright {
+    align-self: center;
+}
+
+#copyright-text {
+    color: #e6ebe0;
+    text-align: center;
+    width: 200px;
+}
+
+#staycation-britain {
+    color: #e6ebe0;
+    text-align: center;
+    font-family: "Dancing Script";
+    font-size: 48px;
+}
+
+#social-links {
+    color: #e6ebe0;
+    text-align: center;
+}
+
+.social {
+    align-self: center;
+}
+
+.social-links li a {
+    width: 40px;
+    height: 40px;
+    padding: 5px 7px;
+    border-radius: 50%;
+    font-size: 18px;
+    line-height: 15px;
+    text-align: center;
+    color: #ffffff;
+    background: #000000;
+    transition: all 0.35s ease-in-out;
+    margin: 5px 5px;
+}
+
+.social-links li a:hover {
+    background: #36c9c6;
 }
 
 @media (max-width: 1199px) {
