--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,10 @@
     --bs-gutter-x: 0;
 }
 
+#nav-staycation-britain {
+    font-size: 24px;
+}
+
 @media (max-width: 767px) {
     #suitcase {
         height: 60px;
@@ -108,6 +112,18 @@
         padding-left: 20px;
         font-size: 48px;
         margin-top: -550px;
+    }
+
+    .navbar-brand {
+        padding-left: 0;
+    }
+
+    #nav-staycation-britain {
+        font-size: 18px;
+    }
+
+    .navbar-toggler {
+        margin-right: 20px;
     }
 }
 
@@ -368,23 +384,23 @@ form {
 
     .pic-tiles-1 {
         border-radius: 30px;
-        width: 225%;
+        width: 220%;
         
     }
 
     .pic-tiles-2 {
         border-radius: 30px;
-        width: 225%;
+        width: 220%;
         margin-bottom: 160px;
-        margin-left: 10px;
+        margin-left: -20px;
         
     }
 
     .pic-tiles-3 {
         border-radius: 30px;
-        width: 225%;
+        width: 220%;
         margin-top: 200px;
-        margin-left: -250%;
+        margin-left: -200%;
         
     }
 
