--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,14 +77,14 @@
 /*--- Hero image --- */
 
 #hero {
-    background-image: url(/assets/images/shellfish-beach.jpg);
+    background-image: url(/assets/images/shellfish-beach-wide-crop.jpg);
+    background-attachment: fixed;
     max-width: none;
     background-size: cover;
-    height: 900px;
-    margin-top: -100px;
-    background-attachment: local;
+    width: 100%;
+    height: 700px;
+    margin-top: -20px;
     background-position: bottom;
-    background-attachment: fixed;
 }
 
 .display-4 {
@@ -96,12 +96,8 @@
     margin-top: -600px;
 }
 
-@media (max-width: 767px) {
-    #hero {
-        height: 700px;
-        background-position: inherit;
-    }
 
+@media (max-width: 767px) {
     .display-4 {
         padding-left: 20px;
         font-size: 48px;
@@ -131,9 +127,17 @@ body {
 
 /*--- Introduction section ---*/
 
+.title-intro {
+    text-decoration: underline;
+    text-align: center;
+    padding-top: 30px;
+    font-size: 48px;
+    font-style: italic;
+}
+
 .intro {
     font-size: 24px;
-    padding: 15% 5% 20%;
+    padding: 0 5% 5%;
 }
 
 .capital {
@@ -152,14 +156,13 @@ body {
     padding: 20px;
     width: 100%;
     margin-left: 100px;
-    background-attachment: fixed;
 }
 
 .pic-tiles-2 {
     border-radius: 50px;
     padding: 20px;
     width: 100%;
-    background-attachment: fixed;
+    margin-top: 100px;
 }
 
 .pic-tiles-3 {
@@ -167,21 +170,20 @@ body {
     padding: 20px;
     width: 100%;
     margin-left: -100px;
-    background-attachment: fixed;
 }
 
 /* Second intro */
 
 .intro2{
     font-size: 24px;
-    padding: 0% 5% 20%;
+    padding: 0% 5% 0%;
     text-align-last: center;
 }
 
 /* Locations section */
 
 .card img {
-    padding: 5%;
+    padding: 3% 20% 0;
 }
 
 .mb-4 {
@@ -199,7 +201,7 @@ body {
 }
 
 #map-brighton {
-    height: 250px;
+    height: 350px;
     width: 100%;
     background-color: black;
     overflow: inherit;
@@ -208,7 +210,7 @@ body {
 }
 
 #map-newquay {
-    height: 250px;
+    height: 350px;
     width: 100%;
     background-color: black;
     overflow: inherit;
@@ -217,7 +219,7 @@ body {
 }
 
 #map-cardigan {
-    height: 250px;
+    height: 350px;
     width: 100%;
     background-color: black;
     overflow: inherit;
@@ -226,7 +228,7 @@ body {
 }
 
 #map-skye {
-    height: 250px;
+    height: 350px;
     width: 100%;
     background-color: black;
     overflow: inherit;
@@ -343,6 +345,15 @@ form {
 }
 
 @media (max-width: 1199px) {
+    .card img {
+        padding: 3% 5% 0;
+    }
+
+    #hero {
+        background-size: initial;
+        background-position: inherit;
+    }
+
     .flex {
         height: 500px;
     }
@@ -376,9 +387,23 @@ form {
 }
 
 @media (max-width: 767px) {
+    #hero {
+        height: 590px;
+        background-size: cover;
+        background-position: bottom;
+    }
+
+    .display-4 {
+        margin-top: -510px;
+    }
+
+    .title-intro {
+        font-size: 24px;
+    }
+
     .intro {
-        font-size: 18px;
-        padding: 15% 5% 15%;
+        font-size: 14px;
+        padding: 0 5% 15%;
     } 
 
     .pic-tiles-1 {
@@ -404,13 +429,17 @@ form {
     }
 
     .intro2 {
-        font-size: 18px;
+        font-size: 14px;
         padding: 0% 5%;
         margin-top: -20%;
     }
 
     .card-title {
-        font-size: 36px;
+        font-size: 28px;
+    }
+
+    .card-text {
+        font-size: 14px
     }
 
     .footer .row {
