--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,12 @@
     font-size: 24px;
 }
 
+.navbar-fade {
+    background-color: #e6ebe0ab;
+    border: 0px;
+    transition: background-color .5s ease 0s;
+}
+
 @media (max-width: 767px) {
     #suitcase {
         height: 60px;
@@ -347,6 +353,10 @@ form {
 @media (min-width: 1199px) {
     #hero {
         background-image: url(/assets/images/shellfish-beach-wide-2.jpg)
+    }
+
+    .flex {
+        height: 650px;
     }
 }
 
