--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,46 +82,52 @@
 
 /*--- Floating back to top button ---*/
 
+a {
+    text-decoration: none;
+}
+
+
 #buttonFloat {
-  display: inline-block;
-  background-color: #1f5673;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  border-radius: 4px;
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  transition: background-color .3s,  opacity .5s, visibility .5s;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 1000;
+    background-color: #1f5673;
+    color: #e6ebe0;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 4px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    transition: background-color .3s, color .3s,  opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
 }
 
 /*-- Using unicode from FontAwesome to apply content (f102)*/ 
 
 #buttonFloat::after {
-  content: "\f102";
-  font-family: Font Awesome 5 Free;
-  font-weight: normal;
-  font-style: normal;
-  font-size: 2em;
-  line-height: 50px;
-  color: #fff;
+    content: "\f151";
+    font-family: "Font Awesome 5 Free";
+    font-weight: normal;
+    font-style: normal;
+    font-size: 2em;
+    line-height: 50px;
 }
 
 #buttonFloat:hover {
-  cursor: pointer;
-  background-color: #463730;
+    cursor: pointer;
+    background-color: #e6ebe0;
+    color: #1F5673;
 }
 
 #buttonFloat:active {
-  background-color: #e6ebe0;
+    background-color: #1F5673;
 }
 
 #buttonFloat.show {
-  opacity: 1;
-  visibility: visible;
+    opacity: 1;
+    visibility: visible;
 }
 
 /*--- Hero image --- */
