--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,13 +252,15 @@ body {
     font-size: 48px;
 }
 
+/* Map styling */
+
 #map-brighton {
     height: 350px;
     width: 100%;
     background-color: black;
     overflow: inherit;
     border: #fff;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
 }
 
 #map-newquay {
@@ -267,7 +269,7 @@ body {
     background-color: black;
     overflow: inherit;
     border: #fff;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
 }
 
 #map-cardigan {
@@ -276,7 +278,7 @@ body {
     background-color: black;
     overflow: inherit;
     border: #fff;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
 }
 
 #map-skye {
@@ -285,13 +287,39 @@ body {
     background-color: black;
     overflow: inherit;
     border: #fff;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
 }
+
+/* Map buttons */
+
+.buttons-row {
+    justify-content: center;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.btn {
+    width: 120px;
+    border: 1px solid;
+}
+
+.btn-info {
+    background-color: #9bc1bc;
+}
+
+.btn-info.active {
+    background-color: #9bc1bc;
+}
+
+.btn-check:focus+.btn-info,.btn-info:focus {
+    background-color: #9bc1bc;
+}
+
 
 /* Contact section */
 
 #contact {
-    padding-top: 200px;
+    padding-top: 100px;
     padding-bottom: 50px;
 }
 
@@ -497,12 +525,24 @@ form {
         margin-top: -20%;
     }
 
+    .mb-4 {
+        padding: 20px;
+    }
+
+    .read_more_button {
+        font-size: .75rem;
+    }
+
     .card-title {
         font-size: 28px;
     }
 
     .card-text {
-        font-size: 14px
+        font-size: 12px
+    }
+
+    .buttons-row .col {
+        padding: 7px;
     }
 
     .footer .row {
