--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,6 +337,18 @@ body {
     padding: 0 15px 15px 15px;
 }
 
+#activities-int {
+    display: none;
+}
+
+#restaurants-int {
+    display: none;
+}
+
+#hotels-int {
+    display: none;
+}
+
 /* Contact section */
 
 #contact {
