added mapmarker styling file at end of index.html to capture updates on styling and adjusted styling to suit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ body {
     background-color: #bcc7af;
 }
 
-.card img {
+.card-img-top {
     padding: 3% 20% 0;
 }
 
@@ -469,7 +469,7 @@ form {
 }
 
 @media (max-width: 1199px) {
-    .card img {
+    .card-img-top {
         padding: 3% 5% 0;
     }
 
