--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ a {
     z-index: 1000;
 }
 
-/*-- Using unicode from FontAwesome to apply content (f102)*/ 
+/*-- Using unicode from FontAwesome to apply content (f151)*/ 
 
 #buttonFloat::after {
     content: "\f151";
@@ -244,6 +244,8 @@ body {
 
 .card-img-top {
     padding: 3% 20% 0;
+    width: 80%;
+    align-self: center;
 }
 
 .mb-4 {
@@ -252,12 +254,16 @@ body {
 
 .read_more_button {
     cursor: pointer;
-
+    margin-left: 45%;
 }
 
 .card-title {
     text-align: center;
     font-size: 48px;
+}
+
+.card-text {
+    padding: 0 10%;
 }
 
 /* Map styling */
