--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,7 @@ body {
 .intro {
     font-size: 24px;
     padding: 0 5% 5%;
+    text-align: center;
 }
 
 .capital {
@@ -242,13 +243,6 @@ body {
     background-color: #bcc7af;
 }
 
-.card-img-top {
-    padding: 3% 20% 0;
-    width: 80%;
-    align-self: center;
-    display: none;
-}
-
 #brighton-card-body {
     background-image: url(/assets/images/brighton-pier.jpg);
     background-size: cover;
@@ -298,6 +292,10 @@ body {
 
 .card-text {
     padding: 0 10%;
+}
+
+img, svg {
+    height: 50%;
 }
 
 /* Map styling */
@@ -429,19 +427,22 @@ body {
 /* Contact section */
 
 #contact {
-    padding-top: 100px;
-    padding-bottom: 50px;
+    padding-top: 10px;
 }
 
 .contact-desc {
     font-size: 24px;
-    padding-left: 50px;
-    padding-right: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
+    background-color: #fff;
 }
 
 form {
     padding-left: 50px;
     padding-right: 50px;
+    padding-top: 5%;
+    padding-bottom: 10%;
+    margin-bottom: 10%;
 }
 
 .message-area {
@@ -456,6 +457,8 @@ form {
 .btn-outline-info {
     color: #1F5673;
     border-color: #1F5673;
+    background-color: #fff;
+    margin-bottom: 2%;
 
 }
 
@@ -465,15 +468,11 @@ form {
 
 }
 
-/* Farewell image */
-
-.teddy {
-    margin-top: 250px;
-    margin-bottom: 250px;
-}
-
-.img-fluid {
-    border-radius: 20px;
+#background-teddy {
+    background-image: url(/assets/images/luggage-teddy.jpg);
+    background-size: contain;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 /* Footer */
@@ -573,18 +572,28 @@ form {
         width: 130%;
     }
 
+    .card-text-int {
+        font-size: 0.75rem;;
+    }
+
     .contact-desc {
     font-size: 18px;    
     }
 
-    #contact {
-    padding-top: 100px;
+    .intro {
+        font-size: 18px;
     }
 
-    .teddy {
-    margin-top: 150px;
-    margin-bottom: 150px;
+    .intro2 {
+        font-size: 18px;
     }
+}
+
+@media (max-width: 991px) {
+    img, svg {
+        height: 30%;
+    }
+    
 }
 
 @media (max-width: 767px) {
@@ -604,7 +613,7 @@ form {
 
     .intro {
         font-size: 14px;
-        padding: 0 5% 15%;
+        padding: 5%;
     } 
 
     .pic-tiles-1 {
@@ -626,21 +635,31 @@ form {
         width: 220%;
         margin-top: 200px;
         margin-left: -200%;
-        
     }
 
     .intro2 {
         font-size: 14px;
-        padding: 0% 5%;
-        margin-top: -20%;
     }
 
     .mb-4 {
         padding: 20px;
     }
 
+    #brighton-card-body {
+        background-position: bottom;
+    }
+
+    .card-body {
+        margin: 5%;
+        padding: 1rem 0;
+    }
+
     .read_more_button {
         font-size: .75rem;
+    }
+
+    img, svg {
+        height: 180px;
     }
 
     .card-title {
