card head centered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,10 @@ body {
     font-family: "Dancing Script";
 }
 
+.card-head {
+    text-align: center;
+}
+
 .card-text {
     padding: 0 10%;
 }
