--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,23 +59,12 @@
     font-family: "Dancing Script";
 }
 
-.navbar-fade {
-    background-color: #e6ebe0f1;
-    border: 0px;
-    transition: background-color .5s ease 0s;
-    opacity: 0;
-}
-
-.navbar-fade:hover {
-    background-color: #e6ebe0f1;
-    border: 0px;
-    transition: background-color .5s ease 0s;
-    opacity: 100%;
-
-}
-
 .navbar-collapse {
     justify-content: flex-end;
+}
+
+.nav-up {
+    top: -85px;
 }
 
 @media (max-width: 767px) {
@@ -301,7 +290,13 @@ body {
 
 .read_more_button {
     cursor: pointer;
+    color: #1f5673
 }
+
+.read_more_button:hover {
+    color: #fff;
+}
+
 
 .card-title {
     text-align: center;
@@ -535,7 +530,7 @@ form {
     font-size: 48px;
 }
 
-#social-links {
+.social-links {
     color: #e6ebe0;
     text-align: center;
 }
@@ -547,10 +542,9 @@ form {
 .social-links li a {
     width: 42px;
     height: 42px;
-    padding: 8px 5px;
+    padding: 9px 0px;
     border-radius: 50%;
-    font-size: 25px;
-    line-height: 15px;
+    font-size: 20px;
     text-align: center;
     color: #ffffff;
     background: #463730;
