--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,14 +289,27 @@ body {
 }
 
 .read_more_button {
+    background:#1f5673;
+    border:1px solid #dfdfdf;
+    color:#e6ebe0;
+    font: italic 15px Playfair Display;
+    padding:11px;
+    font-weight:400;
+    max-width:250px;
+    display:block;
+    text-align:center;  
+    margin:10px auto;
+    position:relative;
+    border-radius:25px;
     cursor: pointer;
-    color: #1f5673
 }
 
-.read_more_button:hover {
-    color: #fff;
+  .read_more_button:hover {
+    -webkit-box-shadow:inset 0 0 10px 25px #ff9999;
+    box-shadow:inset 0 0 10px 25px #e6ebe0;
+    border-color:#1f5673;
+    color:#1f5673;
 }
-
 
 .card-title {
     text-align: center;
