--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,15 @@
     color: #36c9c6;
 }
 
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    color: #36c9c6;
+}
+
 .active {
+    color: #36c9c6;
+}
+
+.navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show>.nav-link {
     color: #36c9c6;
 }
 
@@ -281,7 +289,6 @@ body {
 
 .card-body {
     background-color:#bcc7afe3;
-    text-align: center;
 }
 
 .mb-4 {
@@ -695,6 +702,7 @@ form {
 
     .read_more_button {
         font-size: .75rem;
+        max-width: 130px;
     }
 
     img, svg {
