--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,8 @@
     top: -85px;
 }
 
+/*--- Nav Bar for versions less than 767px --- */
+
 @media (max-width: 767px) {
     .navbar {
         border-radius: 0 0 10px 10px;
@@ -127,7 +129,7 @@ a {
     z-index: 1000;
 }
 
-/*-- Using unicode from FontAwesome to apply content (f151)*/ 
+/*-- Using unicode from FontAwesome to apply content (f151) ---*/ 
 
 #buttonFloat::after {
     content: "\f151";
@@ -156,7 +158,7 @@ a {
 /*--- Hero image --- */
 
 #hero {
-    background-image: url(/assets/images/shellfish-beach-wide-crop.jpg);
+    background-image: url(assets/images/shellfish-beach-wide-crop.jpg);
     background-attachment: fixed;
     max-width: none;
     background-size: cover;
@@ -175,6 +177,7 @@ a {
     margin-top: -500px;
 }
 
+/*-- Hero image for versions less than 767px --*/
 
 @media (max-width: 767px) {
     .display-4 {
@@ -260,28 +263,28 @@ body {
 }
 
 #brighton-card-body {
-    background-image: url(/assets/images/brighton-pier.jpg);
+    background-image: url(assets/images/brighton-pier.jpg);
     background-size: cover;
     background-attachment: fixed;
     padding: 5%;
 }
 
 #newquay-card-body {
-    background-image: url(/assets/images/newquay.jpg);
+    background-image: url(assets/images/newquay.jpg);
     background-size: cover;
     background-attachment: fixed;
     padding: 5%;
 }
 
 #cardigan-card-body {
-    background-image: url(/assets/images/cardigan-bay.jpg);
+    background-image: url(assets/images/cardigan-bay.jpg);
     background-size: cover;
     background-attachment: fixed;
     padding: 5%;
 }
 
 #skye-card-body {
-    background-image: url(/assets/images/scotland-skye-3.jpg);
+    background-image: url(assets/images/scotland-skye-3.jpg);
     background-size: cover;
     background-attachment: fixed;
     padding: 5%;
@@ -416,8 +419,6 @@ img, svg {
     padding: 0 15px 15px 15px;
 }
 
-
-
 #brighton-activities-int {
     display: none;
 }
@@ -465,7 +466,6 @@ img, svg {
 #skye-hotels-int {
     display: none;
 }
-
 
 /* Contact section */
 
@@ -516,7 +516,7 @@ form {
 }
 
 #background-teddy {
-    background-image: url(/assets/images/luggage-teddy.jpg);
+    background-image: url(assets/images/luggage-teddy.jpg);
     background-size: contain;
     background-attachment: fixed;
     background-position: center;
@@ -582,7 +582,7 @@ form {
 
 @media (min-width: 1199px) {
     #hero {
-        background-image: url(/assets/images/shellfish-beach-wide-2.jpg)
+        background-image: url(assets/images/shellfish-beach-wide-2.jpg)
     }
 
     .flex {
