--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ a {
 /*--- Hero image --- */
 
 #hero {
-    background-image: url(assets/images/shellfish-beach-wide-crop.jpg);
+    background-image: url(/assets/images/shellfish-beach-wide-crop.jpg);
     background-attachment: fixed;
     max-width: none;
     background-size: cover;
@@ -263,28 +263,28 @@ body {
 }
 
 #brighton-card-body {
-    background-image: url(assets/images/brighton-pier.jpg);
+    background-image: url(/assets/images/brighton-pier.jpg);
     background-size: cover;
     background-attachment: fixed;
     padding: 5%;
 }
 
 #newquay-card-body {
-    background-image: url(assets/images/newquay.jpg);
+    background-image: url(/assets/images/newquay.jpg);
     background-size: cover;
     background-attachment: fixed;
     padding: 5%;
 }
 
 #cardigan-card-body {
-    background-image: url(assets/images/cardigan-bay.jpg);
+    background-image: url(/assets/images/cardigan-bay.jpg);
     background-size: cover;
     background-attachment: fixed;
     padding: 5%;
 }
 
 #skye-card-body {
-    background-image: url(assets/images/scotland-skye-3.jpg);
+    background-image: url(/assets/images/scotland-skye-3.jpg);
     background-size: cover;
     background-attachment: fixed;
     padding: 5%;
@@ -516,7 +516,7 @@ form {
 }
 
 #background-teddy {
-    background-image: url(assets/images/luggage-teddy.jpg);
+    background-image: url(/assets/images/luggage-teddy.jpg);
     background-size: contain;
     background-attachment: fixed;
     background-position: center;
@@ -582,7 +582,7 @@ form {
 
 @media (min-width: 1199px) {
     #hero {
-        background-image: url(assets/images/shellfish-beach-wide-2.jpg)
+        background-image: url(/assets/images/shellfish-beach-wide-2.jpg)
     }
 
     .flex {
