relative path given on hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ a {
 /*--- Hero image --- */
 
 #hero {
-    background-image: url("assets/images/shellfish-beach-wide-crop.jpg");
+    background-image: url(../images/shellfish-beach-wide-crop.jpg);
     background-attachment: fixed;
     max-width: none;
     background-size: cover;
