--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@
 @media (max-width: 767px) {
     .navbar {
         border-radius: 0 0 10px 10px;
+        border-style: groove;
     }
 
     .navbar-nav {
