padding and margins at 0

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,6 +594,11 @@ form {
     display: inline-flex;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+  }
+
 @media (min-width: 1199px) {
     .flex {
         height: 650px;
